improved panel with buttons for alphabetic PDU test, wireshark, and wireshark help